# qinex-nonebot-plugin-qguard

./: .env.example  .gitignore  AI_SUPPORT_PROGRESS.md  KNOWLEDGE_BASE_LICENSE.md  LICENSE  PROGRESS.md  QGuard_OneBot_v11_详细开发设计_AI提示词.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  OPEN_SOURCE_CHECKLIST.md
nonebot_plugin_ai_core/: __init__.py  config.py  exceptions.py  metadata.py  models.py  qguard_registry.py  service.py
nonebot_plugin_group_wiki/: __init__.py  config.py  metadata.py  models.py  qguard_registry.py
nonebot_plugin_log_doctor/: __init__.py  config.py  metadata.py  models.py
nonebot_plugin_qfun/: __init__.py  config.py  metadata.py  models.py  qguard_registry.py
nonebot_plugin_qguard/: __init__.py  config.py  constants.py  enums.py  metadata.py  qguard_registry.py  registry.py
nonebot_plugin_qlicense/: __init__.py  config.py  metadata.py  qguard_registry.py
nonebot_plugin_support_bot/: __init__.py  config.py  metadata.py  models.py  qguard_registry.py
tests/: conftest.py  test_ai_core.py  test_auto_patrol.py  test_auto_recall.py  test_builtin_moderation.py  test_card_lock.py  test_group_setting.py  test_group_wiki.py  test_help_text.py  test_inactive_cleanup.py  test_join_review.py  test_join_welcome.py  test_local_plugin_load_order.py  test_log_doctor.py  test_message_cache.py  test_moderation_lists.py  test_newbie_protection.py  test_permission.py  test_plugin_registry.py  test_qfun.py  test_qlicense.py  test_rule_engine.py  test_score_service.py  test_support_bot.py  test_timeparse.py
(+208 files in other folders)
